--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -8,13 +8,7 @@
           </a>
         </li>
         <li>
-          <a href="/">
-            <i class="fa fa-trophy"></i>
-            <h5>Award Winners</h5>
-          </a>
-        </li>
-        <li>
-            <a href="/">
+            <a href="/most-viewed">
               <i class="fa fa-users"></i>
               <h5>Most Viewed Actors</h5>
             </a>
