--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title>Rotten Tomatoes Ratings</title>
-    <link rel='stylesheet' type = "css" href='/style.css'/>
+    <link rel='stylesheet' type="text/css" href='style.css'/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
   </head>
   <body>
